[gd_scene load_steps=4 format=3 uid="uid://q4v13822wj65"]

[ext_resource type="Script" path="res://Main.gd" id="1_bp686"]
[ext_resource type="PackedScene" uid="uid://v5nowgwrea5u" path="res://Wall.tscn" id="1_i62x5"]
[ext_resource type="Theme" uid="uid://dfifbhrbyhgkb" path="res://UI/MainUITheme.tres" id="3_auqqj"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bp686")
metadata/_edit_lock_ = true

[node name="Solids" type="Node2D" parent="."]

[node name="Wall" parent="Solids" instance=ExtResource("1_i62x5")]
position = Vector2(112, 112)

[node name="Wall2" parent="Solids" instance=ExtResource("1_i62x5")]
position = Vector2(112, 144)

[node name="Wall3" parent="Solids" instance=ExtResource("1_i62x5")]
position = Vector2(144, 144)

[node name="Wall4" parent="Solids" instance=ExtResource("1_i62x5")]
position = Vector2(176, 144)

[node name="Wall5" parent="Solids" instance=ExtResource("1_i62x5")]
position = Vector2(240, 112)

[node name="Players" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/Player.tscn")
spawn_path = NodePath("../Players")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NetworkInfo" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
size_flags_vertical = 0
text = "Info"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 83.0
offset_bottom = 144.0
theme = ExtResource("3_auqqj")

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="PortInput" type="LineEdit" parent="CanvasLayer/PanelContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "9999"

[node name="AddressInput" type="LineEdit" parent="CanvasLayer/PanelContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "localhost"

[node name="Start" type="Button" parent="CanvasLayer/PanelContainer/Menu"]
layout_mode = 2
text = "Start"

[node name="JoinButton" type="Button" parent="CanvasLayer/PanelContainer/Menu"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="CanvasLayer/PanelContainer/Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/Menu/JoinButton" to="." method="_on_join_button_pressed"]
